# sonos-cli

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/commands/: discover.rs  mod.rs  speaker.rs
src/sonos/: device.rs  discovery.rs  errors.rs  mod.rs  upnp.rs
template/: errors.hbs  service.hbs  service.mod.hbs  template.json
template/services/: mod.hbs  service.hbs
