[package]
name = "sonos-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
env_logger = "0.11.5"
futures = "0.3.31"
humantime = "2.1.0"
log = "0.4.22"
rupnp = "2.0.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread"] }
